CoreAudio: Don't apply audio category if it is not needed

If just devices are requested, no need to apply any categories
with activation of audio device.

Postpone setting category and activating audio until
actual playing is requested.

Categories/options for input devices:
AVAudioSessionCategoryPlayAndRecord with AVAudioSessionCategoryOptionMixWithOthers
For output:
AVAudioSessionCategoryAmbient with no options.

Fixes: QTBUG-83776
Change-Id: I9364bdea2882bc23039817207eca62b311841ba6
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
(cherry picked from commit b5a55492a63cb2cda75d6f980acb7fc5ae8dfc22)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>