src/plugins/coreaudio/coreaudiodeviceinfo.mm
@@ -60,11 +60,6 @@ CoreAudioDeviceInfo::CoreAudioDeviceInfo(const QByteArray &device, QAudio::Mode 
     m_deviceId = AudioDeviceID(deviceID);
 #else //iOS
     m_device = device;
-    if (mode == QAudio::AudioInput) {
-        if (CoreAudioSessionManager::instance().category() != CoreAudioSessionManager::PlayAndRecord) {
-            CoreAudioSessionManager::instance().setCategory(CoreAudioSessionManager::PlayAndRecord);
-        }
-    }
 #endif
 }
 
@@ -336,14 +331,6 @@ QList<QByteArray> CoreAudioDeviceInfo::availableDevices(QAudio::Mode mode)
         }
     }
 #else //iOS
-    if (mode == QAudio::AudioInput) {
-        if (CoreAudioSessionManager::instance().category() != CoreAudioSessionManager::PlayAndRecord) {
-            CoreAudioSessionManager::instance().setCategory(CoreAudioSessionManager::PlayAndRecord);
-        }
-    }
-
-    CoreAudioSessionManager::instance().setActive(true);
-
     if (mode == QAudio::AudioOutput)
         return CoreAudioSessionManager::instance().outputDevices();
     if (mode == QAudio::AudioInput)
